Change host service to use pre-built Docker image
Updated the host service to use a pre-built image instead of building from a Dockerfile.

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,7 @@ name: mcp-station
 
 services:
   host:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: ghcr.io/braynshock/mcp-station:latest
     container_name: mcp-station-host
     restart: unless-stopped
     ports:
